--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Spartan&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');
 html{
     height: 100%;
     width: 100%;
@@ -16,5 +16,8 @@ body{
         display: flex;
         justify-content: center;
         flex-direction: column;
+    }
+    .title{
+        font-weight: 700;
     }
 }
