--- a/style.css
+++ b/style.css
@@ -56,4 +56,35 @@ body{
         color: gold;
         text-align: center;
     }
+    .comments{
+        background-color:  rgb(80, 32, 80);
+        width: 95%;
+        height: auto;
+        border-radius: 10px;
+        margin-bottom: 1.4rem;
+    }
+    .details{
+        padding: 2rem 2rem 1rem 2rem;
+        display: flex;
+        /* justify-content: space-between; */
+        align-items: center;
+    }
+    .profpic{
+        border-radius: 50%;
+        width: 15%;
+        height: 15%;
+    }
+    .name{
+        color: white;
+    }
+    .status{
+        color: rgb(238, 104, 164);
+    }
+    .cgroup{
+        margin-left: 1rem;
+    }
+    .usercomment{
+        color: white;
+        margin: 0 2rem 2rem 2rem;
+    }
 }
