--- a/style.css
+++ b/style.css
@@ -1,90 +1,94 @@
-@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap');
-html{
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap");
+html {
+  height: 100%;
+  width: 100%;
+  font-family: "Spartan", sans-serif;
+}
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+@media only screen and (max-width: 480px) {
+  .maincontainer {
     height: 100%;
     width: 100%;
-    font-family: 'Spartan', sans-serif;
-}
-body{
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-}
-@media only screen and (max-width: 480px){
-    .maincontainer{
-        height: 100%;
-        width: 100%;
-        display: flex;
-        /* justify-content: center; */
-        flex-direction: column;
-        align-items: center !important;
-    }
-    .title{
-        text-align: center;
-        width: 70%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: 700;
-        color: rgb(80, 32, 80);
-        font-size: 1.6rem;
-        margin-top: 4rem;
-    }
-    .description{
-        width: 90%;
-        text-align: center;
-        color: hsl(303, 10%, 53%);
-        font-size: 1.2rem;
-    }
-    .ratings{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        padding: .8rem;
-        padding-bottom: .2rem;
-        background-color: hsl(300, 24%, 96%);
-        border-radius: 10px;
-        width: 90%;
-        margin-bottom: 1rem;
-    }
-    .rated{
-        color: rgb(80, 32, 80);
-        font-weight: bold;
-    }
-    .fa-star{
-        color: gold;
-        text-align: center;
-    }
-    .comments{
-        background-color:  rgb(80, 32, 80);
-        width: 95%;
-        height: auto;
-        border-radius: 10px;
-        margin-bottom: 1.4rem;
-    }
-    .details{
-        padding: 2rem 2rem 1rem 2rem;
-        display: flex;
-        /* justify-content: space-between; */
-        align-items: center;
-    }
-    .profpic{
-        border-radius: 50%;
-        width: 15%;
-        height: 15%;
-    }
-    .name{
-        color: white;
-    }
-    .status{
-        color: rgb(238, 104, 164);
-    }
-    .cgroup{
-        margin-left: 1rem;
-    }
-    .usercomment{
-        color: white;
-        margin: 0 2rem 2rem 2rem;
-    }
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    align-items: center !important;
+    background: url(images/bg-pattern-top-mobile.svg) top no-repeat,
+      url(images/bg-pattern-bottom-mobile.svg) bottom no-repeat;
+  }
+  .title {
+    text-align: center;
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    color: rgb(80, 32, 80);
+    font-size: 1.6rem;
+    margin-top: 4rem;
+  }
+  .description {
+    width: 90%;
+    text-align: center;
+    color: hsl(303, 10%, 53%);
+    font-size: 1.2rem;
+  }
+  .ratings {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0.8rem;
+    padding-bottom: 0.2rem;
+    background-color: hsl(300, 24%, 96%);
+    border-radius: 10px;
+    width: 85%;
+    margin-bottom: 1rem;
+  }
+  .rated {
+    color: rgb(80, 32, 80);
+    font-weight: bold;
+  }
+  .fa-star {
+    color: gold;
+    text-align: center;
+  }
+  .comments {
+    background-color: rgb(80, 32, 80);
+    width: 90%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 1.4rem;
+  }
+  .comments:last-of-type{
+      margin-bottom: 10rem !important;
+  }
+  .details {
+    padding: 2rem 2rem 1rem 2rem;
+    display: flex;
+    align-items: center;
+  }
+  .profpic {
+    border-radius: 50%;
+    width: 15%;
+    height: 15%;
+  }
+  .name {
+    color: white;
+  }
+  .status {
+    color: rgb(238, 104, 164);
+  }
+  .cgroup {
+    margin-left: 1rem;
+  }
+  .usercomment {
+    color: white;
+    margin: 0 2rem 2rem 2rem;
+  }
 }
