--- a/style.css
+++ b/style.css
@@ -21,6 +21,24 @@ body {
     background: url(images/bg-pattern-top-mobile.svg) top no-repeat,
       url(images/bg-pattern-bottom-mobile.svg) bottom no-repeat;
   }
+  .deskcontainer{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+  }
+  .flexgroup{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .titleg{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
   .title {
     text-align: center;
     width: 70%;
@@ -65,8 +83,8 @@ body {
     border-radius: 10px;
     margin-bottom: 1.4rem;
   }
-  .comments:last-of-type{
-      margin-bottom: 10rem !important;
+  .comments:last-of-type {
+    margin-bottom: 10rem !important;
   }
   .details {
     padding: 2rem 2rem 1rem 2rem;
@@ -93,41 +111,48 @@ body {
   }
 }
 @media only screen and (min-width: 768px) {
-    .maincontainer{
-        width: 100%;
-
-    }
-    .deskcontainer{
-        width: 80%;
-        margin: 5rem;
-    }
-    .title{
-        color: rgb(80, 32, 80);
-        font-weight: bold;
-        font-size: 3rem;
-        width: 60%;
-    }
-    .description{
-        width: 45%;
-        color: rgb(147, 123, 146);
-
-    }
-    /* Rating Section */
-    .ratings{
-        text-align: center;
-        width: 100%;
-        background-color: rgb(247, 242, 247) ;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+  .maincontainer {
+    width: 100%;
+  }
+  .deskcontainer {
+    width: 80%;
+    margin: 5rem;
+  }
+  .title {
+    color: rgb(80, 32, 80);
+    font-weight: bold;
+    font-size: 3rem;
+    width: 70%;
+  }
+  .description {
+    width: 78%;
+    color: rgb(147, 123, 146);
+  }
+  /* Rating Section */
+  .ratings {
+    text-align: center;
+    width: 100%;
+    background-color: rgb(247, 242, 247);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+  }
+  .rated{
+    font-weight: bold;
+    color: rgb(80, 32, 80);
     
-    .rategroup{
-      width: 100%;
-    }
-    .flexgroup{
-      display: flex;
-      
-    }
+  }
 
+  .rategroup {
+    width: 70%;
+  }
+  .flexgroup {
+    display: flex;
+  }
+  .fa-star {
+    color: gold;
+  }
 }
