--- a/style.css
+++ b/style.css
@@ -111,13 +111,25 @@ body {
   }
 }
 @media only screen and (min-width: 768px) {
+  html{
+    background-image: url(images/bg-pattern-top-desktop.svg), url(images/bg-pattern-bottom-desktop.svg);
+    background-repeat: no-repeat, no-repeat;
+    background-position-y: 0, 7rem;
+    background-position-x: 0, 20rem;
+  }
+
   .maincontainer {
     width: 100%;
+    height: 100%;
+
+
   }
   .deskcontainer {
-    margin: 6rem;
+    margin: 0 5rem 0 5rem;
+
   }
   .title {
+    margin-top: 5rem;
     color: rgb(80, 32, 80);
     font-weight: bold;
     font-size: 3rem;
@@ -146,6 +158,7 @@ body {
 
   .rategroup {
     width: 70%;
+    margin-top: 5rem;
   }
   .flexgroup {
     display: flex;
@@ -167,6 +180,7 @@ body {
     display: flex;
     flex-wrap: wrap;
   }
+
   .details {
     display: flex;
     flex-direction: row;
@@ -200,17 +214,23 @@ body {
     padding: .2rem;
     font-size: .8rem;
     padding-bottom: 1rem;
+    line-height: 1.4rem;
   }
 
   .cgroup{
     width: 100%;
     padding-left: 1rem;
   }
+  .c1{
+    margin-bottom: 10rem;
+  }
   .c2{
     transform: translateY(2rem);
+    margin-bottom: 10rem;
   }
   .c3{
     transform: translateY(4rem);
+    margin-bottom: 10rem;
 
   }
 }
